fix: tags not wrapping in rentals page

--- a/src/pages/Rentals/Rentals.sass
+++ b/src/pages/Rentals/Rentals.sass
@@ -36,6 +36,9 @@
     @media (max-width: 576px)
       font-size: 14px
   &__tags
+    display: flex
+    flex-wrap: wrap
+    gap: 10px 0
     margin-top: 25px
     @media (max-width: 576px)
       margin-top: 10px
